# genshin-unlock

./: .gitignore  CMakeLists.txt  README.md  README.zh-Hans.md  README.zh-Hant.md
cmake/: WriteModuleHashes.cmake
docs/: loader-rewrite-architecture.zh-Hans.md
include/bootstrap/: BootstrapCore.hpp  BootstrapEntry.hpp  HostValidator.hpp  IpcServer.hpp  RuntimeLoader.hpp
include/launcher/: AppConfig.hpp  GameLocator.hpp  HandshakeClient.hpp  Injector.hpp  Logger.hpp  ModuleValidator.hpp  ProcessStarter.hpp  VersionPolicy.hpp
include/loader/: HelperProtocol.hpp  LaunchRequest.hpp
include/runtime/: FovService.hpp  FpsService.hpp  HookManager.hpp  HookManagerInl.hpp  InputSampler.hpp  IpcWriter.hpp  LoggerProxy.hpp  MemoryResolver.hpp  RuntimeMain.hpp  RuntimeState.hpp
include/shared/: ConfigModel.hpp  EventLog.hpp  Protocol.hpp  StatusCode.hpp  VersionTable.hpp
include/util/: Version.hpp
include/util/win/: Loader.hpp  LoaderInl.hpp  PipeMessage.hpp
res/: bootstrap.rc  launcher.manifest  launcher.rc  loader.manifest  loader.rc  plugin.rc  runtime.rc  version.rc.in
src/bootstrap/: BootstrapCore.cpp  BootstrapEntry.cpp  DllMain.cpp  HostValidator.cpp  IpcServer.cpp  RuntimeLoader.cpp
src/helper/: Main.cpp
src/launcher/: AppConfig.cpp  GameLocator.cpp  HandshakeClient.cpp  Injector.cpp  Logger.cpp  Main.cpp  ModuleValidator.cpp  ProcessStarter.cpp  VersionPolicy.cpp
src/loader/: HelperProtocol.cpp  Main.cpp
src/plugin/components/: FovUnlocker.cpp  FpsUnlocker.cpp
src/runtime/: FovService.cpp  FpsService.cpp  HookManager.cpp  InputSampler.cpp  IpcWriter.cpp  LoggerProxy.cpp  MemoryResolver.cpp  RuntimeMain.cpp  RuntimeState.cpp
src/shared/: ConfigModel.hpp  EventLog.hpp  Protocol.hpp  Shared.cpp  StatusCode.hpp  VersionTable.cpp  VersionTable.hpp
src/util/: Version.cpp
src/util/win/: Loader.cpp  PipeMessage.cpp
tests/: CoreTests.cpp
